# mazesolver

./: MANIFEST.in  README.md  setup.cfg
mazesolver/: generator.py  solvers.py
mazesolver/maze_maps/: sample.txt  small_maze.txt
