[metadata]
name = mazesolver
version = 1.0.0
description = Various graph traversal algorithms implemented to solve a maze
author = Julien Castiaux
author-email = julien.castiaux@gmail.com
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Julien00859/mazesolver
license = MIT
classifiers =
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only

[options]
packages = mazesolver

[options.package_data]
* = maze_maps/*
